--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>frontend-app</title>
   </head>
   <body >
-    <div id="root" class="bg-background-50 dark:bg-background-950"></div>
+    <div id="root" class="bg-neutral-200 dark:bg-background-950"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
